--- a/total.html
+++ b/total.html
@@ -209,154 +209,154 @@
                                     <td>Loading..</td>
                                     <td>Loading..</td>
                                     <td>Loading..</td>
-                                    <td>Loading..</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Recurring deposit</td>
                                     <td id="rec-md">Loading..</td>
                                     <td id="rec-cur">Loading..</td>
                                     <td id="rec-pr">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Term deposit</td>
                                     <td id="fd-md">Loading..</td>
                                     <td id="tm-pr">Loading..</td>
                                     <td>Not available</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Certificate of deposit</td>
                                     <td id="cd-md">Loading..</td>
                                     <td id="cd-pr">Loading..</td>
                                     <td id="cd-cur">Loading..</td>
-                                    <td>NA</td>
+                                    <td><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Indian deposit recipt</td>
                                     <td>Not applicable</td>
                                     <td id="idr-cur">Loading..</td>
                                     <td id="idr-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Insurance Policies</td>
                                     <td id="ip-ed">Loading..</td>
                                     <td id="ip-pa">Loading..</td>
                                     <td>NA</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">ULIP</td>
                                     <td id="ulip-sd">Loading..</td>
                                     <td id="ulip-pa">Loading..</td>
                                     <td>NA</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Employee provident fund</td>
                                     <td>NA</td>
                                     <td id="epf-cb">Loading..</td>
                                     <td id="epf-tb">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Public provident fund</td>
                                     <td id="ppf-md">Loading..</td>
                                     <td id="ppf-cb">Loading..</td>
                                     <td>NA</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Mutual funds</td>
                                     <td>NA</td>
                                     <td id="mf-cur">Loading..</td>
                                     <td id="mf-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Bonds</td>
                                     <td id="bond-md">Loading..</td>
                                     <td id="bond-cur">Loading..</td>
                                     <td id="bond-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Deventures</td>
                                     <td id="db-md">Loading..</td>
                                     <td id="db-cur">Loading..</td>
                                     <td id="db-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Exchange Traded funds</td>
                                     <td>NA</td>
                                     <td id="etf-cur">Loading..</td>
                                     <td id="etf-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">National Pension mission</td>
                                     <td>NA</td>
                                     <td id="nps-cv">Loading..</td>
                                     <td>NA</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Government securities</td>
                                     <td id="gs-md">Loading..</td>
                                     <td id="gs-cur">Loading..</td>
                                     <td id="gs-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Commercial Paper</td>
                                     <td>NA</td>
                                     <td id="cp-cur">Loading..</td>
                                     <td id="cp-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">REIF</td>
                                     <td>NA</td>
                                     <td id="reit-cur">Loading..</td>
                                     <td id="reit-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Infrastructure investment funds</td>
                                     <td>NA</td>
                                     <td id="invit-cur">Loading..</td>
                                     <td id="invit-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Alternate investment funds</td>
                                     <td>NA</td>
                                     <td id="aif-cur">Loading..</td>
                                     <td id="aif-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:orange">LOW</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Systematic investment fund</td>
                                     <td id="sip-md">Loading..</td>
                                     <td id="sip-cur">Loading..</td>
                                     <td id="sip-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Equity shares</td>
                                     <td>NA</td>
                                     <td id="eq-cur">Loading..</td>
                                     <td id="eq-inv">Loading..</td>
-                                    <td>NA</td>
+                                    <td ><div style="background:lightgreen">HIGH</div></td>
                                   </tr>
                                   <tr>
                                     <td scope="row" class="scope">Collective investment funds</td>
                                     <td class="border-bottom-0">NA</td>
                                     <td id="cis-cur" class="border-bottom-0">Loading..</td>
                                     <td id="cis-inv" class="border-bottom-0">Loading..</td>
-                                    <td class="border-bottom-0">NA</td>
+                                    <td ><div style="background:yellow">MEDIUM</div></td>
                                   </tr>
                                 </tbody>
                               </table>
